# Citizen-Complaint-Resolution-System

./: .actignore  .coderabbit.yaml  .gitignore  .gitmodules  CCRS_COUNTRY_CODE_IMPLEMENTATION.md  GUIDE.md  JURISDICTION_BASED_WORKFLOW_DESIGN.md  MAC-QUICKSTART.md  MZ_PGR_CATEGORY_AUTHORITY_SPEC.md  MZ_PGR_WORKING_PLAN.md  NOVU-FINAL-SETUP-GUIDE.md  NOVU-SETUP-GUIDE.md  PGR_IGE_SOLUTION_DOCUMENT.md  README.md  Solution Design Document – PGR Workflow (IGE).docx  VISIBILITY-DESIGN.md  docker-compose.egov-digit.yaml  docker-compose.monitoring.yml  docker-compose.yml  novu-setup.sh  package-lock.json  package.json
.github/: CONTRIBUTING.md
Workflow/: PGR Workflow Create cURL.txt  PGR_WORKFLOW.json
ansible/: README.md  deploy-bomet.sh  deploy-nairobi.sh  inventory.ini  playbook-deploy.yml
configurator/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
db/: localization-seed.sql  tenant-seed.sql
digit-mcp/: .dockerignore  .gitignore  .npmrc  Dockerfile  README.md  ecosystem.config.cjs  engram-agent.ts  install.sh  package-lock.json  (+18 more)
local-setup/digit-bootstrap/: .gitignore  PREFLIGHT.md  pyproject.toml
local-setup/digit-bootstrap/digit_bootstrap/: __init__.py  cli.py  mcp_client.py  orchestrator.py  template.py
local-setup/digit-bootstrap/digit_bootstrap/templates/: africa.yaml  india.yaml
local-setup/digit-bootstrap/tests/: test_cli.py  test_e2e_smoke.py  test_mcp_client.py  test_orchestrator.py  test_smoke.py  test_template.py  test_templates_load.py
local-setup/digit-bootstrap/tests/fixtures/: minimal-template.yaml
(+2578 files in other folders)
