[project]
name = "digit-bootstrap"
version = "0.1.0"
description = "MCP-driven tenant bootstrap orchestrator for DIGIT"
readme = "PREFLIGHT.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.8,<3",
    "pyyaml>=6.0,<7",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-httpx>=0.30,<1",
]

[project.scripts]
digit-bootstrap = "digit_bootstrap.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["digit_bootstrap*"]

[tool.setuptools.package-data]
digit_bootstrap = ["templates/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
